# naya

./: CMakeLists.txt  main_2dof.cpp  main_4dof.cpp  main_8dof.cpp  main_compositional_6dof.cpp  main_tps.cpp  naya.h  nayaActive.cpp  nayaSCV.cpp  parameters.yml  tracking_aux.cpp  tracking_aux.h
