cmake_minimum_required(VERSION 2.8)
project(naya)
find_package(OpenCV REQUIRED)
file(GLOB_RECURSE sources *.cpp)
add_library(libs STATIC ${sources})
target_link_libraries(libs ${OpenCV_LIBS})
add_executable(naya_2dof main_2dof.cpp)
add_executable(naya_4dof main_4dof.cpp)
add_executable(naya_6dof main_6dof.cpp)
add_executable(naya_8dof main_8dof.cpp)
target_link_libraries(naya_2dof libs)
target_link_libraries(naya_4dof libs)
target_link_libraries(naya_6dof libs)
target_link_libraries(naya_8dof libs)
